# cmake-install-components

./: CMakeLists.txt  README.md  vcpkg.json
cmake/presets/: base.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_cict_executable.cmake  add_cict_module.cmake  cict-config.cmake  cict-install-targets.cmake  set_cict_target_properties.cmake
src/core/: CMakeLists.txt
src/core/include/cict/core/: version.hpp
src/core/src/: version.cpp
src/http/: CMakeLists.txt
src/http/include/cict/http/: version.hpp
src/http/src/: version.cpp
tests/: CMakeLists.txt
tests/cmake/: add_cict_test.cmake
tests/core/: CMakeLists.txt  version_test.cpp
